fixed weird layout bug

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -7,7 +7,9 @@
   height: 100vh;
 
   +#grid {
-    margin-top: rem(-80px);
+    @include media(">=sm") {
+      margin-top: rem(-80px);
+    }
   }
 
   .gradient,
